--- a/index.html
+++ b/index.html
@@ -982,8 +982,11 @@ footer {
     <div class="screenshots-grid">
       <div class="screenshot-card large reveal">
         <div class="screenshot-placeholder" style="aspect-ratio: 21/9;">
-          <span class="ph-icon">🖥️</span>
-          <span class="ph-text">Overlay — full keyboard view</span>
+          <img src="screenshots/ss_overlay.png" alt="Live overlay" style="width:100%;height:100%;object-fit:cover;display:block;" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
+          <div style="display:none;flex-direction:column;align-items:center;justify-content:center;gap:12px;width:100%;height:100%;position:absolute;inset:0;">
+            <span class="ph-icon">🖥️</span>
+            <span class="ph-text">screenshots/ss_overlay.png</span>
+          </div>
         </div>
         <div class="screenshot-caption">
           <h4>Live overlay</h4>
@@ -993,8 +996,11 @@ footer {
 
       <div class="screenshot-card reveal reveal-delay-1">
         <div class="screenshot-placeholder">
-          <span class="ph-icon">🎛️</span>
-          <span class="ph-text">Control panel</span>
+          <img src="screenshots/ss_control_panel.png" alt="Control panel" style="width:100%;height:100%;object-fit:cover;display:block;" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
+          <div style="display:none;flex-direction:column;align-items:center;justify-content:center;gap:12px;width:100%;height:100%;position:absolute;inset:0;">
+            <span class="ph-icon">🎛️</span>
+            <span class="ph-text">screenshots/ss_control_panel.png</span>
+          </div>
         </div>
         <div class="screenshot-caption">
           <h4>Control panel</h4>
@@ -1004,8 +1010,11 @@ footer {
 
       <div class="screenshot-card reveal reveal-delay-2">
         <div class="screenshot-placeholder">
-          <span class="ph-icon">✏️</span>
-          <span class="ph-text">Layout editor</span>
+          <img src="screenshots/ss_editor.png" alt="Layout editor" style="width:100%;height:100%;object-fit:cover;display:block;" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
+          <div style="display:none;flex-direction:column;align-items:center;justify-content:center;gap:12px;width:100%;height:100%;position:absolute;inset:0;">
+            <span class="ph-icon">✏️</span>
+            <span class="ph-text">screenshots/ss_editor.png</span>
+          </div>
         </div>
         <div class="screenshot-caption">
           <h4>Drag-and-drop editor</h4>
@@ -1015,8 +1024,11 @@ footer {
 
       <div class="screenshot-card reveal reveal-delay-3">
         <div class="screenshot-placeholder">
-          <span class="ph-icon">🎨</span>
-          <span class="ph-text">Theme editor</span>
+          <img src="screenshots/ss_theme_editor.png" alt="Theme editor" style="width:100%;height:100%;object-fit:cover;display:block;" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
+          <div style="display:none;flex-direction:column;align-items:center;justify-content:center;gap:12px;width:100%;height:100%;position:absolute;inset:0;">
+            <span class="ph-icon">🎨</span>
+            <span class="ph-text">screenshots/ss_theme_editor.png</span>
+          </div>
         </div>
         <div class="screenshot-caption">
           <h4>Theme editor</h4>
@@ -1026,8 +1038,11 @@ footer {
 
       <div class="screenshot-card reveal reveal-delay-4">
         <div class="screenshot-placeholder">
-          <span class="ph-icon">🎮</span>
-          <span class="ph-text">Gaming preset</span>
+          <img src="screenshots/ss_gaming_preset.png" alt="Gaming preset" style="width:100%;height:100%;object-fit:cover;display:block;" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';">
+          <div style="display:none;flex-direction:column;align-items:center;justify-content:center;gap:12px;width:100%;height:100%;position:absolute;inset:0;">
+            <span class="ph-icon">🎮</span>
+            <span class="ph-text">screenshots/ss_gaming_preset.png</span>
+          </div>
         </div>
         <div class="screenshot-caption">
           <h4>Gaming / WASD preset</h4>
