--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Keyboard Overlay — Stream Tool</title>
+<title>Overkeys — Stream Tool</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,500;0,9..40,700;1,9..40,300&display=swap" rel="stylesheet">
 
@@ -812,7 +812,7 @@ footer {
     <li><a href="#screenshots">Screenshots</a></li>
     <li><a href="#how">How it works</a></li>
     <li><a href="#install">Install</a></li>
-    <li><a href="https://github.com" class="nav-cta">GitHub ↗</a></li>
+    <li><a href="https://github.com/hevji/overkeys" class="nav-cta">GitHub ↗</a></li>
   </ul>
 </nav>
 
@@ -834,7 +834,7 @@ footer {
           <a href="#install" class="btn-primary">
             ↓ Get started
           </a>
-          <a href="https://github.com" class="btn-secondary">
+          <a href="https://github.com/hevji/overkeys" class="btn-secondary">
             View on GitHub ↗
           </a>
         </div>
@@ -1101,7 +1101,7 @@ footer {
           <span>terminal</span>
         </div>
         <pre><span class="c-comment"># clone the repo</span>
-<span class="c-cmd">git clone</span> <span class="c-str">https://github.com/you/keyboard-overlay</span>
+<span class="c-cmd">git clone</span> <span class="c-str">https://github.com/hevji/overkeys</span>
 <span class="c-cmd">cd</span> keyboard-overlay
 
 <span class="c-comment"># install dependencies</span>
@@ -1126,7 +1126,7 @@ footer {
           <span class="pill">Linux</span>
         </div>
         <br>
-        <a href="https://github.com" class="btn-primary" style="margin-top:8px;">
+        <a href="https://github.com/hevji/overkeys" class="btn-primary" style="margin-top:8px;">
           View on GitHub ↗
         </a>
       </div>
@@ -1140,10 +1140,10 @@ footer {
 <footer>
   <div class="footer-inner">
     <div class="footer-left">
-      <strong>Keyboard Overlay</strong> — open source, MIT licence
+      <strong>Overkeys</strong> — open source, MIT licence
     </div>
     <div class="footer-links">
-      <a href="https://github.com">GitHub</a>
+      <a href="https://github.com/hevji/overkeys">GitHub</a>
       <a href="#features">Features</a>
       <a href="#install">Install</a>
     </div>
