--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@ footer {
         </div>
         <pre><span class="c-comment"># clone the repo</span>
 <span class="c-cmd">git clone</span> <span class="c-str">https://github.com/hevji/overkeys</span>
-<span class="c-cmd">cd</span> keyboard-overlay
+<span class="c-cmd">cd</span> overkeys
 
 <span class="c-comment"># install dependencies</span>
 <span class="c-cmd">pip install</span> <span class="c-key">-r</span> requirements.txt
