--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ footer {
 <nav>
   <a href="#" class="nav-logo">
     <span>⌨</span>
-    keyboard overlay
+    Overkeys
   </a>
   <ul class="nav-links">
     <li><a href="#features">Features</a></li>
