--- a/download/index.html
+++ b/download/index.html
@@ -10,7 +10,7 @@
   <script>
     window.onload = function () {
       const link = document.createElement("a");
-      link.href = "https://github.com/hevji/overkeys/releases/download/overkeys/Overkeys-V1.0.0.zip"; // file path or URL
+      link.href = "https://github.com/hevji/overkeys/releases/download/overkeys/main.zip"; // file path or URL
       link.download = "file.zip"; // optional filename
       document.body.appendChild(link);
       link.click();
